--- a/dvc.yaml
+++ b/dvc.yaml
@@ -4,9 +4,12 @@ stages:
     deps:
       - src/data_ingestion.py
       - Experiments/spam.csv
+    params:
+      - data_ingestion.test_size
     outs:
       - data/train.csv
       - data/test.csv
+
 
   data_preprocessing:
     cmd: python src/data_preprocessing.py
@@ -14,8 +17,7 @@ stages:
       - src/data_preprocessing.py
       - data/train.csv
       - data/test.csv
-    # params:
-    #   - preprocessing.test_size
+
     outs:
       - data/intermin/preprocessed_train.csv
       - data/intermin/preprocessed_test.csv
@@ -26,9 +28,12 @@ stages:
       - src/feature_engineering.py
       - data/intermin/preprocessed_train.csv
       - data/intermin/preprocessed_test.csv
+    params:
+      - feature_engineering.max_features
     outs:
       - data/final/final_train.csv
       - data/final/final_test.csv
+
 
   model_building:
     cmd: python src/model_building.py
